fixed symbols so they align with eachother

--- a/ReactWebsite/src/Components/Contact/Contact.css
+++ b/ReactWebsite/src/Components/Contact/Contact.css
@@ -82,15 +82,15 @@ button {
   }
 
   #contactIcon :first-child{
-    width: 25%;
-    height: 25%;
+    width: 15%;
+    height: auto;
     }   
   
   #contactIcon{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: right;
+    align-items: right;
 
   }   
   
